--- a/css/style.css
+++ b/css/style.css
@@ -111,3 +111,14 @@
     text-align: center;
   }
   
+  .banniere {
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    background-color: #8a8a8a;
+    color: white;
+    text-align: center;
+    padding: 10px;
+    font-size: 20px;
+  }
